# rev-engine

./: .coverage.pieguytechs-MacBook-Air.local.4369.214122  .coveragerc  .docker.env  .dockerignore  .envrc.example  .flake8  .flycode.yaml  .gitignore  .pre-commit-config.yaml  .prettierignore  .sentryclirc  .talismanrc  Dockerfile  Dockerfile.e2e  Dockerfile.hub  Makefile  README.md  app.json  churn-demo.json  cloudbuild-new.yaml  cloudbuild.yaml  conftest.py  cookiejar  coverage.xml  deployment-tasks.sh  docker-compose-deploy.yml  docker-compose-dev.yml  docker-compose-hub.yml  docker-compose.utils.yml  docker-compose.yml  docker-entrypoint.sh  google_sa.sh  hackathon.ipynb  heroku.yml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  review-tasks.sh  (+5 more)
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pre-commit.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: chromatic.yml  cypress.yml  dependency-review.yml  main.yaml  main.yml  post-heroku-deploy.yml  pre-commit.yml  setup-python.yml  test-e2e.yml  test-js.yml  test-python.yml  tests.yml
apps/activity_log/: admin.py  apps.py  models.py  typings.py
apps/activity_log/migrations/: 0001_DEV-5825_initial.py  0002_DEV-6208_add_send_receipt.py
apps/activity_log/tests/: conftest.py  test_admin.py  test_models.py
apps/api/: admin.py  authentication.py  error_messages.py  exceptions.py  filters.py  mixins.py  pagination.py  permissions.py  serializers.py  throttling.py  tokens.py  urls.py  views.py
apps/api/schemas/: portal-contribution-detail.openapi.yml  portal-contribution-list.openapi.yml
apps/api/tests/: __init__.py  test_auth.py  test_authentication.py  test_filters.py  test_mixins.py  test_permissions.py  test_serializers.py  test_urls.py  test_views.py
apps/common/: __init__.py  admin.py  apps.py  constants.py  context_processors.py  fields.py  github.py  google_cloud_secrets.py  hookdeck.py  logger.py  middleware.py  models.py  secret_manager.py  secrets.py  serializers.py  signals.py  typings.py  utils.py  validators.py  views.py
apps/common/migrations/: 0001_initial.py  0002_DEV-2049_delete_address.py  0002_socialmeta.py  0003_DEV-2031_socialmeta_revenue_program.py  (+5 more)
apps/config/: admin.py  models.py  validators.py
apps/contributions/: 1.md  admin.py  apps.py  bad_actor.py  choices.py  exceptions.py  fields.py  filters.py  models.py  notes.md  payment_intent.py  payment_managers.py  payment_provider.py  permissions.py  serializers.py  signals.py  stripe_contributions_provider.py  stripe_import.py  stripe_payment_details_provider.py  stripe_sync.py  tasks.py  types.py  typings.py  urls.py  utils.py  views.py  webhooks.py
apps/e2e/: __init__.py  admin.py  apps.py  choices.py  exceptions.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/element_media/: apps.py  models.py  tests.py
apps/emails/: admin.py  apps.py  helpers.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/flags/: admin.py  apps.py  constants.py  models.py
apps/google_cloud/: apps.py  pubsub.py  signals.py
apps/google_pub_sub/: apps.py  publisher.py
apps/home/: apps.py  models.py  views.py
apps/media/: apps.py  forms.py  models.py
apps/organizations/: admin.py  apps.py  forms.py  mailchimp.py  models.py  serializers.py  signals.py  tasks.py  typings.py  urls.py  validators.py  views.py
apps/pages/: admin.py  apps.py  defaults.py  filters.py  forms.py  helpers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  validators.py  views.py
apps/public/: permissions.py  serializers.py  urls.py  views.py
apps/slack/: admin.py  models.py  slack_manager.py
apps/users/: __init__.py  admin.py  apps.py  choices.py  constants.py  forms.py  google_pub_sub.py  managers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  validators.py  views.py
docs/: deploy.md
e2e/: README.md  __init__.py  config.py  conftest.py
e2e/tests/: test_contribution_checkout_flow.py
email_templates/: nrh-default-contribution-confirmation-email.html  nrh-default-otd.html  nrh-manage-donations-magic-link.html  nrh-v1-default-thank-you-for-donation.html  nrh-v2-default-one-time-donation.html
google_cloud_pub_sub/: Dockerfile  subscribe.py  test_subscriber.py
requirements/base/: base.in  base.txt
requirements/deploy/: deploy.in  deploy.txt
requirements/dev/: dev.in  dev.txt
revengine/: celery.py  storages.py  urls.py  utils.py  views.py  wsgi.py
revengine/logging/: filters.py
revengine/settings/: base.py  deploy.py  dev.py  hub.py  local.example.py  local_example.py
revengine/static/: manifest.webmanifest  style.css
revengine/templates/: 500.html  500_cloudflare.html  500_heroku.html  base.html  index.html  orgadmin_password_reset_complete.html  react_app.html
revengine/tests/: test_celery.py  test_django_reversion_setup.py  test_settings.py  test_urls.py  test_utils.py  test_views.py
scripts/: __init__.py  heroku-post-migration-reset-postdeploy.sh  heroku-postdeploy.sh  heroku_release.sh  reconcile_migrations.sh  rp-apple-check.py  temp-heroku-postdeploy.sh  trigger-e2e-test-run.py  trigger-e2e-test-run.sh
spa/: .eslintrc.json  .gitignore  .prettierrc  .swcrc  contribution-page.html  craco.config.js  cypress.config.cjs  cypress.config.js  cypress.json  index.html  jest.config.cjs  jest.config.js  package-lock.json  package.json  settings.js  stripe-example.sjon  tailwind.config.js  testSettings.js  tsconfig.json  vite.config.js  vite.cypress.config.js
spa/.storybook/: main.js  main.ts  preview-body.html  preview.js  preview.tsx  templates.js
spa/__mocks__/: svgrMock.js
spa/cypress/: .eslintrc  tsconfig.json
spa/public/: index.html  manifest.json  test_index.html
spa/src/: App.js  App.jsx  App.styled.js  App.test.js  appSettings.js  appSettings.ts  contribution-page.tsx  i18n.ts  index.js  index.jsx  index.tsx  routes.js  routes.ts  settings.js  setupProxy.js  setupTests.js  setupTests.jsx  test-handlers.js  test-server.js  test-utils.js  test-utils.tsx
(+2956 files in other folders)
