[tool.bandit]
targets = ["./apps", "./revengine", "./scripts"]
exclude_dirs = ["tests",]

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | env
  | htmlcov
  | node_modules
  | public
  | venv
)/
'''

[tool.poetry]
name = "rev-engine"
version = "0.1.0"
description = ""
authors = ["Caktus Group, LLC <teams@caktusgroup.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^10"
addict = "^2.4.0"
celery = "^5"
cloudflare = "^2"
dj-database-url = "1.2.0"
django = "^3.2"
django-anymail = "^8.3"
django-celery-beat = "2.4.0"
django-csp = "^3.7"
django-extensions = "3.2.1"
django-filter = "^22.1"
django-health-check = "^3.16.4"
django-json-widget = "^1.1.1"
django-migration-linter = "^4.1.0"
django-model-utils = "4.3.1"
django-redis = "^5"
django-rest-passwordreset = "^1.2.1"
django-reverse-admin = "^2.9.6"
django-reversion = "^5.0.0"
django-reversion-compare = "^0.15.0"
django-solo = "^2.0.0"
django-storages = "1.13.2"
django-test-migrations = "^1.2.0"
django-waffle = "^2.4.1"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^5.2.1"
drf-extra-fields = "^3"
google-auth = "^2.12"
google-cloud-storage = "^2.4.0"
heroku3 = "^5"
newrelic = "8.4.0"
psycopg2-binary = "^2"
pycountry = "^22.3.5"
python3-memcached= "^1"
requests = "^2"
sentry-sdk = "^1"
slack-sdk = "^3"
sorl-thumbnail = "^12.7.0"
sorl-thumbnail-serializer-field = "^0.2.1"
stripe = "^4"
uwsgi = "^2"
whitenoise = "^6.2.0"
google-cloud-pubsub = "^2.13"
pygments = "^2.13.0"
mailchimp-marketing = "^3.0.80"
google-cloud-secret-manager = "^2.16.0"
django-request-id = "^1.0.0"
pydantic = "^2.2.0"
uwsgitop = "^0.11"

[tool.poetry.dev-dependencies]
appnope = "*"
beautifulsoup4 = "*"
bandit = "1.7.5"
black = "23.9.1"
colorama = "*"
coverage = "*"
django-debug-toolbar = "*"
drf-yasg = "*"
factory_boy = "*"
Faker = "*"
flake8 = "6.1.0"
flake8-logging-format = "*"
importlib-metadata = "*"
invoke = "*"
ipython = "*"
isort = "5.12.0"
pre-commit = "*"
pytest = "*"
pytest-cases = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-mock = "*"
pytest-xdist = "*"
pyyaml = "*"
responses = "*"

[tool.poetry.extras]
bandit = ["toml"]

[tool.poetry.group.dev.dependencies]
pytest-celery = "^0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
